[package]
name = "color-utils-cli"
version = "0.2.0"
authors = ["FelixRilling <contact@rilling.dev>"]
description = """
Binary for command line usage of color-utils.
"""
edition = "2021"

[[bin]]
name = "colu"
path = "src/main.rs"

[dependencies]
color-utils = { version = "0.2.0", path = "../lib" }

log = "0.4.21"
env_logger = "0.11.3"
clap = "4.5.3"
termcolor = "1.4.1"

[dependencies.palette]
version = "0.7.3"
default-features = false
features = ["std"]
