[package]
name = "color-utils-cli"
version = "0.2.0"
authors = ["F. Rilling <contact@rilling.dev>"]
license = "GPL-3"
readme = "../../README.md"
repository = "https://github.com/RillingDev/color-utils"
description = """
Binary for command line usage of color-utils.
"""
edition = "2021"

[[bin]]
name = "colu"
path = "src/main.rs"

[dependencies]
color-utils = { version = "0.2.0", path = "../lib" }

log = "0.4.22"
env_logger = "0.11.5"
clap = "4.5.11"
termcolor = "1.4.1"

[dependencies.palette]
version = "0.7.6"
default-features = false
features = ["std"]
