[package]
name = "color-utils"
version = "0.2.0"
authors = ["FelixRilling <contact@rilling.dev>"]
description = """
Library for programatic usage of color-utils.
"""
edition = "2021"

[dependencies]
cssparser = "0.33.0"
cssparser-color = "0.1.0"

[dependencies.palette]
version = "0.7.5"
default-features = false
features = ["std"]
