[package]
name = "color-utils"
version = "0.2.0"
authors = ["F. Rilling <contact@rilling.dev>"]
license = "GPL-3"
readme = "../../README.md"
repository = "https://github.com/RillingDev/color-utils"
description = """
Library for programmatic usage of color-utils.
"""
edition = "2021"

[dependencies]
# Cannot be updated because cssparser-color depends on this exact version.
cssparser = "0.33.0"
cssparser-color = "0.1.0"

[dependencies.palette]
version = "0.7.6"
default-features = false
features = ["std"]
