[package]
name = "color-utils"
version = "0.2.0"
authors = ["F. Rilling <contact@rilling.dev>"]
license = "GPL-3"
readme = "../../README.md"
repository = "https://github.com/RillingDev/color-utils"
description = """
Library for programmatic usage of color-utils.
"""
edition = "2021"

[dependencies]
cssparser = "0.34.0"
cssparser-color = "0.2.0"

[dependencies.palette]
version = "0.7.6"
default-features = false
features = ["std"]
